1.2.22pre2: 2005-06-30
	- Remember last focused window per-workspace

1.2.22pre1: 2005-06-28
	- Latvian translation (Kristaps Kaupe)
	- Double click activates workspace in window list
	- Fixes to taskbar layout when only tasks visible
	- Made network status applets show/hide dynamically again
	- Add image to taskbar collapse button
        - Fix MinimizeToDesktop windows getting out of desktop area
	- Added key binding: KeySysCollapseTaskBar
	- Fixed UTF-8 input support in AddressBar

1.2.21: 2005-05-31

1.2.21pre2: 2005-05-16
	- translation: Vietnamese (Phan Vinh Thinh)
	- translation: Indonesian (Arif E. Nugroho)
	- translation update: Simplified Chinese (Hiweed Leng)
	- translation update: French (Frederic Bothamy)
	- APM applet support for NetBSD (Iain Hibbert (plunky))
	- add new winoption: noFocusOnMap
	- fix ClientWindowMouseActions for Window-Drag combination

1.2.21pre1: 2005-03-20
	- improve selection of "urgent" windows with alt+tab
	- fix possible crash (Grant McDorman)
	- fix 64bit usage of Xft (Marcus Meissner)
	- cleanup warning on still-open file descriptors
        - disabled some Ctrl+Alt+Del commands by default since
          they need some configuring to work on all systems
        - fix desktop layer setting for nautilus

1.2.20: 2005-01-09
	- fix+revert default binding for MouseWinMove an MouseWinSize
	- fix 1 pixel border when taskbar at top of screen
	- fix themes not loading from user directory

1.2.19: 2004-12-26
	- fix crash/build failure when taskbar disabled
	- fix build/link with some gcc/g++ versions

1.2.18: 2004-12-18
	- changed icedesert colors (Hanspeter Roth)

1.2.18pre1: 2004-12-05
	- disable SupportsSemitransparency by default, this makes
	icewmbg exit after setting the image and reduces memory usage
	- fix Meta key handling typo
	- fix CPU waste in icewm-session and icewmtray
	- fix some Win+x key combinations
        - new settings MouseWinMove (=Alt+Ctrl+Pointer_Button1) and 