@@ -1,5 +1,7 @@
 1.2.22pre2: 2005-06-30
 	- Remember last focused window per-workspace
+	- Enable the LockCommand functionality only if command 
+          found (Eduard Bloch)
 
 1.2.22pre1: 2005-06-28
 	- Latvian translation (Kristaps Kaupe)
